# world

./: CMakeLists.txt  README.md  controls.h  logger.h  main.cpp  shader.h  textrenderer.h  utils.h
glad/: Makefile  cmake_install.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
resources/shaders/: 2dtext.frag  light.frag  light.vert  main.frag  main.vert  tessellation.tesc  tessellation.tese
